--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -1,24 +1,237 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="olP-Ym-WG6">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="de8-tQ-3ve">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="9dL-wd-873" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sul-mt-hPO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="kdl-5N-I3B"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" image="plus" catalog="system" id="3IW-oA-nGJ"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jv4-vp-c9e" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1306" y="-1653"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="2rO-Z6-tiS">
+            <objects>
+                <viewController id="0nI-Rp-SV3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bty-Bv-Vs1">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="puf-nc-bB8"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="calendar" catalog="system" id="BFr-m5-4R4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aj8-Pj-sWu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1306" y="-980"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="B3q-jw-sSO">
+            <objects>
+                <viewController id="I2K-Kc-Ge6" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sci-GP-WCP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="oA5-lh-WTK"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="house" catalog="system" id="7Tv-ZE-8TP"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0or-x2-hm5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="355" y="-1653"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="F9a-PE-AO2">
+            <objects>
+                <viewController id="FeU-u6-UhP" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4ua-b1-2MY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="kE0-aI-fMh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="person" catalog="system" id="jw1-WU-1rj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mff-xf-GKX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="354" y="-301"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="09l-im-oRJ">
+            <objects>
+                <viewController id="kH2-1H-IZu" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jLX-bm-d0L">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Hc5-bB-RFQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="lasso" catalog="system" id="8Wz-TA-DD9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6gx-Ib-kLm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1306" y="-301"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="rzF-9T-POw">
+            <objects>
+                <viewController id="iLN-ak-Lf7" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="A1W-dY-Qhg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7vu-wh-1xO">
+                                <rect key="frame" x="82" y="418" width="250" height="160"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T9G-sL-Qh9">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="ZoA-BC-58h"/>
+                                            <constraint firstAttribute="height" constant="40" id="kMO-wq-MX5"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iFL-na-xnR">
+                                        <rect key="frame" x="0.0" y="60" width="250" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="RNm-1r-hwi"/>
+                                            <constraint firstAttribute="width" constant="250" id="x7o-yw-eIB"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0oJ-4G-ren">
+                                        <rect key="frame" x="0.0" y="120" width="250" height="40"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Whx-Pd-SSw"/>
+                                        </constraints>
+                                        <state key="normal" title="로그인">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mainImage" translatesAutoresizingMaskIntoConstraints="NO" id="52n-Rf-wKi">
+                                <rect key="frame" x="82" y="188" width="250" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="WpD-ir-vJs"/>
+                                    <constraint firstAttribute="width" constant="250" id="o4o-OT-zty"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aY0-oY-zXo">
+                                <rect key="frame" x="108.5" y="608" width="197" height="32"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="아이디가 없으신가요? 회원가입">
+                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="VIe-ex-6Nn"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="52n-Rf-wKi" firstAttribute="centerX" secondItem="A1W-dY-Qhg" secondAttribute="centerX" id="3lu-EV-U6x"/>
+                            <constraint firstItem="7vu-wh-1xO" firstAttribute="top" secondItem="52n-Rf-wKi" secondAttribute="bottom" constant="80" id="4Ha-iY-qWT"/>
+                            <constraint firstItem="7vu-wh-1xO" firstAttribute="centerX" secondItem="A1W-dY-Qhg" secondAttribute="centerX" id="LE3-Qq-fpA"/>
+                            <constraint firstItem="52n-Rf-wKi" firstAttribute="top" secondItem="VIe-ex-6Nn" secondAttribute="top" constant="100" id="bZp-r7-AMV"/>
+                            <constraint firstItem="aY0-oY-zXo" firstAttribute="top" secondItem="7vu-wh-1xO" secondAttribute="bottom" constant="30" id="nrZ-sQ-2PL"/>
+                            <constraint firstItem="aY0-oY-zXo" firstAttribute="centerX" secondItem="A1W-dY-Qhg" secondAttribute="centerX" id="soM-0E-Kel"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="7eF-Mg-G4Z"/>
+                    <connections>
+                        <segue destination="nEU-Be-W7C" kind="show" id="Wap-gz-ScA"/>
+                        <segue destination="2zu-cT-bAk" kind="show" id="rLa-t1-o7c"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c4w-Cg-yWb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1730" y="-1360"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7Gj-lY-rzz">
+            <objects>
+                <navigationController id="olP-Ym-WG6" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vec-wA-eqM">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="iLN-ak-Lf7" kind="relationship" relationship="rootViewController" id="SUG-sq-rm0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uR5-H0-5RN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2645" y="-980"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wpN-nf-hz7">
+            <objects>
+                <viewController id="nEU-Be-W7C" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="S4g-vm-gib">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="dM7-61-uEx"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="HOo-Bh-U8f"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wq1-MP-p8f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1735" y="-628"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="DvZ-Wq-dQl">
+            <objects>
+                <tabBarController id="2zu-cT-bAk" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="mZT-y4-ilJ"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SvH-Um-K9o">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="I2K-Kc-Ge6" kind="relationship" relationship="viewControllers" id="Xpp-hc-JfX"/>
+                        <segue destination="9dL-wd-873" kind="relationship" relationship="viewControllers" id="GiO-wP-moy"/>
+                        <segue destination="0nI-Rp-SV3" kind="relationship" relationship="viewControllers" id="o9L-Xt-nLm"/>
+                        <segue destination="kH2-1H-IZu" kind="relationship" relationship="viewControllers" id="apg-xh-xSS"/>
+                        <segue destination="FeU-u6-UhP" kind="relationship" relationship="viewControllers" id="Y3h-G8-pgj"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Lm-lz-Wk6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-535" y="-980"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="calendar" catalog="system" width="128" height="106"/>
+        <image name="house" catalog="system" width="128" height="106"/>
+        <image name="lasso" catalog="system" width="128" height="118"/>
+        <image name="mainImage" width="296" height="206"/>
+        <image name="person" catalog="system" width="128" height="117"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
