--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0oJ-4G-ren">
-                                <rect key="frame" x="16" y="220" width="382" height="40"/>
+                                <rect key="frame" x="16" y="224" width="382" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Whx-Pd-SSw"/>
                                 </constraints>
@@ -104,47 +104,63 @@
                                     <action selector="loginTapped:" destination="iLN-ak-Lf7" eventType="touchUpInside" id="iqV-D2-gUn"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7vu-wh-1xO">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ZXb-yn-6Zs">
                                 <rect key="frame" x="16" y="104" width="382" height="100"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="dKV-QX-9cH">
-                                        <rect key="frame" x="0.0" y="0.0" width="73.5" height="100"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="pAq-aA-xtL">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="40"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u03-yx-Wz8">
-                                                <rect key="frame" x="0.0" y="0.0" width="73.5" height="42"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="75" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="75" id="NqG-PA-oJH"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ob-06-YY6">
-                                                <rect key="frame" x="0.0" y="58" width="73.5" height="42"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="dKV-QX-9cH">
+                                                <rect key="frame" x="95" y="0.0" width="287" height="40"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="email" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T9G-sL-Qh9">
+                                                        <rect key="frame" x="0.0" y="0.0" width="287" height="40"/>
+                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="kMO-wq-MX5"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="next"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jQx-Gb-wqu">
-                                        <rect key="frame" x="93.5" y="0.0" width="288.5" height="100"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7vu-wh-1xO">
+                                        <rect key="frame" x="0.0" y="60" width="382" height="40"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="email" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T9G-sL-Qh9">
-                                                <rect key="frame" x="0.0" y="0.0" width="288.5" height="40"/>
-                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ob-06-YY6">
+                                                <rect key="frame" x="0.0" y="0.0" width="75" height="40"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="40" id="kMO-wq-MX5"/>
+                                                    <constraint firstAttribute="width" constant="75" id="Ku9-gD-OOF"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="next"/>
-                                            </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="password" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iFL-na-xnR">
-                                                <rect key="frame" x="0.0" y="60" width="288.5" height="40"/>
-                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="40" id="RNm-1r-hwi"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
-                                            </textField>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jQx-Gb-wqu">
+                                                <rect key="frame" x="95" y="0.0" width="287" height="40"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="password" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iFL-na-xnR">
+                                                        <rect key="frame" x="0.0" y="0.0" width="287" height="40"/>
+                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="RNm-1r-hwi"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -154,12 +170,12 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="7vu-wh-1xO" firstAttribute="centerX" secondItem="A1W-dY-Qhg" secondAttribute="centerX" id="LE3-Qq-fpA"/>
+                            <constraint firstItem="VIe-ex-6Nn" firstAttribute="trailing" secondItem="ZXb-yn-6Zs" secondAttribute="trailing" constant="16" id="6Qj-KI-dkl"/>
+                            <constraint firstItem="ZXb-yn-6Zs" firstAttribute="top" secondItem="VIe-ex-6Nn" secondAttribute="top" constant="16" id="Jgj-qx-Z70"/>
                             <constraint firstItem="VIe-ex-6Nn" firstAttribute="trailing" secondItem="0oJ-4G-ren" secondAttribute="trailing" constant="16" id="NVt-8O-vfX"/>
-                            <constraint firstItem="7vu-wh-1xO" firstAttribute="leading" secondItem="VIe-ex-6Nn" secondAttribute="leading" constant="16" id="kTf-bb-KUB"/>
-                            <constraint firstItem="0oJ-4G-ren" firstAttribute="top" secondItem="7vu-wh-1xO" secondAttribute="bottom" constant="16" id="kaX-8w-CHk"/>
-                            <constraint firstItem="7vu-wh-1xO" firstAttribute="top" secondItem="VIe-ex-6Nn" secondAttribute="top" constant="16" id="mPk-JQ-DTz"/>
-                            <constraint firstItem="VIe-ex-6Nn" firstAttribute="trailing" secondItem="7vu-wh-1xO" secondAttribute="trailing" constant="16" id="ryl-i1-GNq"/>
+                            <constraint firstItem="ZXb-yn-6Zs" firstAttribute="leading" secondItem="VIe-ex-6Nn" secondAttribute="leading" constant="16" id="Sp9-KP-9yP"/>
+                            <constraint firstItem="ZXb-yn-6Zs" firstAttribute="centerX" secondItem="A1W-dY-Qhg" secondAttribute="centerX" id="lXu-bM-UoO"/>
+                            <constraint firstItem="0oJ-4G-ren" firstAttribute="top" secondItem="ZXb-yn-6Zs" secondAttribute="bottom" constant="20" id="oq5-mI-aze"/>
                             <constraint firstItem="0oJ-4G-ren" firstAttribute="leading" secondItem="VIe-ex-6Nn" secondAttribute="leading" constant="16" id="tbM-Rk-4HT"/>
                         </constraints>
                         <connections>
